Fix think-o. Translate was not the problem; overflow.

--- a/app/assets/index.less
+++ b/app/assets/index.less
@@ -19,8 +19,8 @@ html {
   height: 100%;
 
   body {
+    width: 100%;
     height: 100%;
-    overflow: hidden;
 
     background: @shostakovich;
 
@@ -32,6 +32,7 @@ html {
       position: relative;
       width: 100%;
       height: 100%;
+      overflow: hidden;
 
       > section {
         position: absolute;
@@ -53,16 +54,16 @@ html {
           }
         }
 
-        .transition(left 500ms ease-out);
+        .transition(500ms ease-out);
 
         &.hidden-left {
-          .transition(left 500ms ease-in);
-          left: -100%;
+          .transition(500ms ease-in);
+          .translate(-100%, 0);
         }
 
         &.hidden-right {
-          .transition(left 500ms ease-in);
-          left: 100%;
+          .transition(500ms ease-in);
+          .translate(100%, 0);
         }
       }
     }
